<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <EditText
        android:id="@+id/edit_firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_firstname"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_lastname"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confirmpassword"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Spinner
        android:id="@+id/spin_dept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/dept"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edit_salary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_salary"
        android:inputType="numberDecimal"
        android:maxLines="1" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>